--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
-  position: relative;
+  position: middle;
   margin: auto;
 }
 
