--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 /* Slideshow container */
 .slideshow-container {
   max-width: 700px;
-  position: center;
+  position: relative;
   margin: auto;
 }
 
