--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 * {box-sizing:border-box}
 
-/* Slideshow container */
+/* This is the main box for the slideshow */
 .slideshow-container {
   max-width: 700px;
   position: relative;
@@ -9,7 +9,7 @@
 }
 
 
-/* Hide the images by default */
+/* This hides the images by default */
 .mySlides {
     display: none;
 }
