--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@
 }
 
 
-/* Caption text */
-.text {
+/* Remeber our div class of "caption"? the magic happens here */
+.caption {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
@@ -47,8 +47,8 @@
   text-align: center;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
+/* Now for the order numbers */
+.order {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
