--- a/style.css
+++ b/style.css
@@ -14,28 +14,6 @@
     display: none;
 }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: 36%;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-
 /* Remeber our div class of "caption"? the magic happens here */
 .caption {
   color: #f2f2f2;
@@ -56,7 +34,7 @@
   top: 0;
 }
 
-/* The dots/bullets/indicators */
+/* The dots */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -66,10 +44,6 @@
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
 }
 
 
