--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 /* Remeber our div class of "caption"? the magic happens here */
-.caption {
+.text {
   color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
@@ -26,7 +26,7 @@
 }
 
 /* Now for the order numbers */
-.order {
+.numbertext {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
@@ -34,7 +34,7 @@
   top: 0;
 }
 
-/* The dots */
+/* The navigation dots */
 .dot {
   cursor: pointer;
   height: 15px;
