--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 /* Remeber our div class of "caption"? the magic happens here */
 .caption {
-  color: #f2f2f2;
+  color: #ff753b ;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -27,7 +27,7 @@
 
 /* Now for the order numbers */
 .order {
-  color: #f2f2f2;
+  color:  #ff753b ;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -43,19 +43,17 @@
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
-  transition: background-color 0.6s ease;
 }
 
 
-
 h1 {
-        font: bold Helvetica;
+        font: bold "Helvetica";
         margin: 0 auto;
         text-align: center;
 }
 
 p {
-    font: Helvetica;
+    font: "Helvetica";
     text-align: center;
 }
 
