--- a/style.css
+++ b/style.css
@@ -1,33 +1,52 @@
 
-* {box-sizing:border-box}
-
-/* This is the main box for the slideshow */
+/* This is the main box where my slideshow lives */
 .slideshow-container {
-  max-width: 700px;
+  max-width: 1000px;
   position: relative;
   margin: auto;
 }
 
-
-/* This hides the images by default */
+/* This will hide my images by default */
 .mySlides {
     display: none;
 }
 
-/* Remeber our div class of "caption"? the magic happens here */
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+
+/* remember our div for caption? this is where the magic happens */
 .caption {
-  color: #ff753b ;
+  color: #FFFFFF;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
-  width: 65%;
+  width: 100%;
   text-align: center;
 }
 
-/* Now for the order numbers */
+/* now for the order numbers */
 .order {
-  color:  #ff753b ;
+  color: #FFFFFF;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -43,7 +62,9 @@
   background-color: #bbb;
   border-radius: 50%;
   display: inline-block;
+  transition: background-color 0.6s ease;
 }
+
 
 
 h1 {
