--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 /* This is the main box where my slideshow lives */
-.slideshow-container {
+.slideshow-main {
   max-width: 1000px;
   position: relative;
   margin: auto;
