--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   cursor: pointer;
   position: absolute;
   top: 50%;
-  width: auto;
+  width: 35%;
   margin-top: -22px;
   padding: 16px;
   color: white;
@@ -64,8 +64,6 @@
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-
-
 
 h1 {
         font: bold "Helvetica";
