--- a/style.css
+++ b/style.css
@@ -26,6 +26,25 @@
   border-radius: 0 3px 3px 0;
 }
 
+/* Remember our div class of caption? this is where the magic happens*/
+.caption {
+  color: #ffffff;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Now for the order numbers*/
+.order {
+  color: #ffffff;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
 /* Position the "next button" to the right */
 .next {
   right: 0;
