--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@
   border-radius: 0 3px 3px 0;
 }
 
+/* This will position the "next button" to the right, otherwise they would overlap. */
+.next {
+  right: 0;
+  border-radius: 5px 0 0 5px;
+}
+
 /* Remember our div class of caption? this is where the magic happens*/
 .caption {
   color: #ffffff;
