--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@
   position: absolute;
   top: 50%;
   width: 35%;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
+  margin-top: -35px;
+  padding: 20px;
+  color: #FFD601;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
