--- a/style.css
+++ b/style.css
@@ -20,6 +20,8 @@
   margin-top: -15px;
   padding: 35px;
   color: #FFD601;
+  font-weight: bold;
+  font-size: 50px;
 }
 
 /* This will position the "next button" to the right, otherwise they would overlap. */
