--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  font-family: helvetica, arial;
+  text-align: center;
+}
 
 /* This is the main box where my slideshow lives */
 .slideshow-main {
@@ -48,18 +52,6 @@
   padding: 8px 12px;
   position: absolute;
   top: 0;
-}
-
-
-h1 {
-        font: bold "Helvetica";
-        margin: 0 auto;
-        text-align: center;
-}
-
-p {
-    font: "Helvetica";
-    text-align: center;
 }
 
 body {
