--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
 .prev, .next {
   cursor: pointer;
   position: relative;
-  top: auto;
+  top: 150%;
   width: auto;
   margin-top: -15px;
   padding: 35px;
