--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ html {
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 100%;
-  width: 100%;
+  top: 70%;
+  width: auto;
   margin-top: -15px;
   padding: 35px;
   color: #FFD601;
