--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html {
   cursor: pointer;
   position: absolute;
   top: 50%;
-  width: 50%;
+  width: auto;
   margin-top: -15px;
   padding: 35px;
   color: #FFD601;
