--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ html {
 
 /* Remember our div class of caption? this is where the magic happens*/
 .caption {
-  color: #ffffff;
+  color: black;
   font-size: 35px;
   padding: 8px 12px;
   position: relative;
@@ -47,7 +47,7 @@ html {
 
 /* Now for the order numbers*/
 .order {
-  color: #ffffff;
+  color: black;
   font-size: 20px;
   padding: 8px 12px;
   position: relative;
