--- a/style.css
+++ b/style.css
@@ -15,14 +15,13 @@ html {
     display: none;
 }
 
-/* Next & previous buttons */
+/* Next & previous buttons
+Since I coulnd't figure out the JavaScript to make these functional, they will serve as decoration.*/
+
 .prev, .next {
-  cursor: pointer;
   position: relative;
   top: 50%;
   width: auto;
-  margin-top: -22px;
-  padding: 15px;
   color: #FFD601;
   font-weight: bold;
   font-size: 50px;
